--- a/08.Selenium사용_GitHub로그인.ipynb
+++ b/08.Selenium사용_GitHub로그인.ipynb
@@ -17,21 +17,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: webdriver-manager\n",
-      "Version: 4.0.1\n",
-      "Summary: Library provides the way to automatically manage drivers for different browsers\n",
-      "Home-page: https://github.com/SergeyPirogov/webdriver_manager\n",
-      "Author: Sergey Pirogov\n",
-      "Author-email: automationremarks@gmail.com\n",
-      "License: \n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: packaging, python-dotenv, requests\n",
-      "Required-by: \n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip show webdriver-manager"
+    "%pip install -q webdriver-manager"
    ]
   },
   {
@@ -43,15 +34,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: webdriver-managerNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Version: 4.0.2\n",
+      "Summary: Library provides the way to automatically manage drivers for different browsers\n",
+      "Home-page: https://github.com/SergeyPirogov/webdriver_manager\n",
+      "Author: Sergey Pirogov\n",
+      "Author-email: automationremarks@gmail.com\n",
+      "License: \n",
+      "Location: c:\\Users\\user\\anaconda3\\Lib\\site-packages\n",
+      "Requires: packaging, python-dotenv, requests\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show webdriver-manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Name: selenium\n",
-      "Version: 4.19.0\n",
-      "Summary: \n",
+      "Version: 4.31.0\n",
+      "Summary: Official Python bindings for Selenium WebDriver\n",
       "Home-page: https://www.selenium.dev\n",
       "Author: \n",
       "Author-email: \n",
       "License: Apache 2.0\n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: certifi, trio, trio-websocket, typing_extensions, urllib3\n",
+      "Location: C:\\Users\\user\\anaconda3\\Lib\\site-packages\n",
+      "Requires: certifi, trio, trio-websocket, typing_extensions, urllib3, websocket-client\n",
       "Required-by: \n"
      ]
     }
@@ -63,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'4.19.0'"
+       "'4.31.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<selenium.webdriver.remote.webelement.WebElement (session=\"19206919677e9ae7a0e84dc4709e1dd4\", element=\"f.0AB07DE194AF878522AD01C18ABD54D8.d.54C337F52A772BC27D3686943598C4AD.e.161\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"19206919677e9ae7a0e84dc4709e1dd4\", element=\"f.0AB07DE194AF878522AD01C18ABD54D8.d.54C337F52A772BC27D3686943598C4AD.e.162\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"19206919677e9ae7a0e84dc4709e1dd4\", element=\"f.0AB07DE194AF878522AD01C18ABD54D8.d.54C337F52A772BC27D3686943598C4AD.e.163\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"19206919677e9ae7a0e84dc4709e1dd4\", element=\"f.0AB07DE194AF878522AD01C18ABD54D8.d.54C337F52A772BC27D3686943598C4AD.e.164\")>]\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -210,18 +236,18 @@
     "driver.get('https://www.naver.com/')\n",
     "time.sleep(2)\n",
     "\n",
-    "#검색어 엘리먼트 가져오기\n",
+    "#검색어 input 엘리먼트 가져오기\n",
     "search_tag = driver.find_element(By.CSS_SELECTOR,'#query')\n",
     "#print(search_tag)\n",
     "\n",
     "#검색창에 파이썬 키워드를 입력한다.\n",
-    "search_tag.send_keys('python')\n",
+    "search_tag.send_keys('파이썬')\n",
     "#엔터를 입력한다.\n",
     "search_tag.send_keys(Keys.ENTER)\n",
     "time.sleep(5)\n",
     "\n",
     "#검색된 결과 중에서 a tag 가져오기 <a class='lnk_tit'>\n",
-    "a_tags = driver.find_elements(By.CSS_SELECTOR,'a.lnk_tit')\n",
+    "a_tags = driver.find_elements(By.CSS_SELECTOR,'a.link_tit')\n",
     "if a_tags:\n",
     "    #첫번째 a tag 선택하고, click() 함수 호출\n",
     "    a_tags[0].click()\n",
@@ -251,15 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "login_ok True\n",
-      "'WebDriver' object has no attribute 'find_elements_by_name'\n"
+      "<selenium.webdriver.remote.webelement.WebElement (session=\"b099a91d584ec54d13308bf9fffbe25c\", element=\"f.18CDDAD79001BFCA7C8A2F450BCD2E6B.d.3919D52E8435A4A1006036E6E92751B7.e.59\")>\n",
+      "login fail ---------------- False\n",
+      "login_ok False\n"
      ]
     }
    ],
@@ -381,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
