--- a/08.Selenium사용_GitHub로그인.ipynb
+++ b/08.Selenium사용_GitHub로그인.ipynb
@@ -277,16 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"b099a91d584ec54d13308bf9fffbe25c\", element=\"f.18CDDAD79001BFCA7C8A2F450BCD2E6B.d.3919D52E8435A4A1006036E6E92751B7.e.59\")>\n",
-      "login fail ---------------- False\n",
-      "login_ok False\n"
+      "login_ok True\n",
+      "'WebDriver' object has no attribute 'find_elements_by_name'\n"
      ]
     }
    ],
@@ -317,8 +316,8 @@
     "#time.sleep(2)\n",
     "\n",
     "#id와 password를 엘리먼트 찾고, 값을 입력하기\n",
-    "driver.find_element(By.CSS_SELECTOR,'input#login_field').send_keys('user')\n",
-    "driver.find_element(By.CSS_SELECTOR,'input#password').send_keys('pass')\n",
+    "driver.find_element(By.CSS_SELECTOR,'input#login_field').send_keys('WorkSpaceForHanmg')\n",
+    "driver.find_element(By.CSS_SELECTOR,'input#password').send_keys('audrb0412!')\n",
     "time.sleep(2)\n",
     "\n",
     "# #password필드에서 엔터치기\n",
